--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -10,7 +10,7 @@ html {
     padding: .75em;
 }
 body {
-    max-width: 800px;
+    max-width: 900px;
     padding: .75em .75em;
     margin: 5em auto;
     background-color: white;
